tests/baselines/reference/downlevelLetConst18.errors.txt
tests/cases/compiler/downlevelLetConst18.ts(4,14): error TS2393: Duplicate function implementation.
tests/cases/compiler/downlevelLetConst18.ts(8,14): error TS2393: Duplicate function implementation.


==== tests/cases/compiler/downlevelLetConst18.ts (2 errors) ====
    'use strict'
    
    for (let x; ;) {
        function foo() { x };
                 ~~~
!!! error TS2393: Duplicate function implementation.
    }
    
    for (let x; ;) {
        function foo() { x };
                 ~~~
!!! error TS2393: Duplicate function implementation.
    }
    
    for (let x; ;) {
        (() => { x })();
    }
    
    for (const x = 1; ;) {
        (() => { x })();
    }
    
    for (let x; ;) {
        ({ foo() { x }})
    }
    
    for (let x; ;) {
        ({ get foo() { return x } })
    }
    
    for (let x; ;) {
        ({ set foo(v) { x } })
    }
    